<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.gov.am.detran.appvistoria.presentation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"
        >

        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_home_to_nav_info"
            app:destination="@id/nav_info" />
    </fragment>

    <fragment
        android:id="@+id/nav_info"
        android:name="br.gov.am.detran.appvistoria.presentation.ui.info.InfoFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="br.gov.am.detran.appvistoria.presentation.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>